--- a/chat.html
+++ b/chat.html
@@ -4,31 +4,117 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/styles.css" />
     <script src="https://kit.fontawesome.com/8c4ed22fd7.js"></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Chat | Kakao Clone</title>
   </head>
-  <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:53</span>
+
+  <body class="chats-body">
+    <div class="header-wrap">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <i class="fas fa-signal"></i>
+          <i class="fas fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-battery-three-quarters"></i>
+          <span class="status-bar__battery-level">75%</span>
+        </div>
+        <div class="status-bar__column-time">
+          <span class="status-bar__clock js-status-bar__clock">13:53</span>
+          <script src="javascript/clock.js"></script>
+        </div>
       </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-three-quarters"></i>
-        <span class="status-bar__battery-level">75%</span>
+
+      <header class="header">
+        <div class="header__header-column">
+          <a href="index.html" class="header__back-btn">
+            <i class="fas fa-arrow-left"></i>
+          </a>
+          <h1 class="header__title">Best Friend</h1>
+        </div>
+        <div class="header__header-column">
+          <a href="find.html">
+            <span class="header__icon">
+              <i class="fas fa-search"></i>
+            </span>
+          </a>
+          <span class="header__icon">
+            <a href="index.html">
+              <i class="fas fa-bars"></i>
+            </a>
+          </span>
+        </div>
+      </header>
+    </div>
+
+    <div class="chat-screen">
+      <ul class="chat__messages">
+        <span class="chat__timestamp"> Friday, January 11, 2019 </span>
+
+        <li class="incoming-message message">
+          <img src="images/avatar.jpg" alt="" class="g-avatar message" />
+          <div class="message__content incoming">
+            <div class="message__bubble incoming">
+              going home
+            </div>
+            <span class="message__timestamp"> 15:19 </span>
+          </div>
+        </li>
+
+        <li class="sent-message message">
+          <div class="message__content sent">
+            <div class="message__bubble sent">
+              Thank you!
+            </div>
+            <span class="message__timestamp"> 15:20 </span>
+          </div>
+        </li>
+
+        <li class="incoming-message message">
+          <img src="images/avatar.jpg" alt="" class="g-avatar message" />
+          <div class="message__content incoming">
+            <!-- <span class="message__author">Lin</span> -->
+            <div class="message__bubble incoming">
+              Congrats. I love you! Congrats. I love you! Congrats. I love you!
+            </div>
+            <span class="message__timestamp"> 15:21 </span>
+          </div>
+        </li>
+
+        <li class="incoming-message message">
+          <img src="images/avatar.jpg" alt="" class="g-avatar message" />
+          <div class="message__content incoming">
+            <div class="message__bubble incoming">
+              <img src="images/avatar0.png" alt="" />
+            </div>
+            <span class="message__timestamp"> 15:22 </span>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="chat__write--container">
+      <input class="chat__write-input" type="text" placeholder="send message" />
+
+      <div class="chat__icon-left chat__icon">
+        <i class="fas fa-plus-square"></i>
+      </div>
+
+      <div class="chat__icon-right chat__icon">
+        <span class="chat__write-icon">
+          <i class="far fa-smile"></i>
+        </span>
+        <span class="chat__write-icon">
+          <i class="fas fa-microphone"></i>
+        </span>
       </div>
     </div>
 
-    <header class="header">
-      <div class="header__row row">
-        <div class="row__column"></div>
-        <div class="row__column"></div>
-      </div>
-      <div class="header__row"></div>
-      <div class="header__row"></div>
-    </header>
+    <div class="bigscreen">
+      Please make your screen small!!😱
+    </div>
   </body>
 </html>
