--- a/index.html
+++ b/index.html
@@ -4,54 +4,72 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/styles.css" />
     <script src="https://kit.fontawesome.com/8c4ed22fd7.js"></script>
-    <title>Chats | Kaka Clone</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Chats | Kakao Clone</title>
   </head>
-  <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:53</span>
-      </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-three-quarters"></i>
-        <span class="status-bar__battery-level">75%</span>
-      </div>
-    </div>
 
-    <header class="header">
-      <div class="header__header-column">
-        <h1>Chats</h1>
+  <!-- <body class="chats-body"> -->
+  <body>
+    <div class="header-wrap">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <i class="fas fa-signal"></i>
+          <i class="fas fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-battery-three-quarters"></i>
+          <span class="status-bar__battery-level">75%</span>
+        </div>
+        <div class="status-bar__column-time">
+          <span class="status-bar__clock js-status-bar__clock">13:53</span>
+          <script src="javascript/clock.js"></script>
+        </div>
       </div>
-      <div class="header__header-column">
-        <span class="header-icon">
-          <i class="fas fa-search"></i>
-        </span>
-        <span class="header-icon">
-          <i class="far fa-comment"></i>
-        </span>
-        <span class="header-icon">
-          <i class="fas fa-cog"></i>
-        </span>
-      </div>
-    </header>
+
+      <header class="header">
+        <div class="header__header-column">
+          <h1 class="header__title">Chats</h1>
+        </div>
+        <div class="header__header-column">
+          <span class="header__icon">
+            <i class="fas fa-search"></i>
+          </span>
+          <span class="header__icon">
+            <i class="far fa-comment"></i>
+          </span>
+          <span class="header__icon">
+            <a href="settings.html">
+              <i class="fas fa-cog"></i>
+            </a>
+          </span>
+        </div>
+      </header>
+    </div>
 
     <main class="chats">
       <ul class="chats__list">
         <a href="chat.html">
-          <li class="chats__chat chat">
-            <div class="chat__column">
-              <img src="images/avatar.jpg" alt="" class="avatar-m" />
-              <div class="chat__content">
-                <span class="chat__username">Lynn</span>
-                <span class="chat__preview">going home!</span>
+          <li class="chats__chat friend friend--lg">
+            <div class="friend__column">
+              <img
+                src="images/avatar.jpg"
+                alt=""
+                class="friend__avatar m-avatar"
+              />
+              <div class="friend__content">
+                <span class="friend__name">Lion</span>
+                <span class="friend__bottom-text">going home</span>
               </div>
             </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">Yesterday</span>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span class="chat__timestamp">
+                  March 7
+                </span>
+              </div>
             </div>
           </li>
         </a>
@@ -60,28 +78,38 @@
 
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nave__items">
+        <li class="nav__list-item">
           <a href="friends.html" class="nav__list-link">
+            <span class="toptitle">user</span>
             <i class="far fa-user"></i>
           </a>
         </li>
-        <li class="nav__items">
+        <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <span class="toptitle">chats</span>
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
-            <span class="badge">8</span>
           </a>
         </li>
-        <li class="nave__items">
+        <li class="nav__list-item">
           <a href="find.html" class="nav__list-link">
+            <span class="toptitle">find</span>
             <i class="fas fa-search"></i>
           </a>
         </li>
-        <li class="nave__items">
+        <li class="nav__list-item">
           <a href="more.html" class="nav__list-link">
+            <span class="toptitle">more</span>
             <i class="fas fa-ellipsis-h"></i>
           </a>
         </li>
       </ul>
     </nav>
+    <div class="show-avatar">
+      <img src="images/avatar0.png" />
+    </div>
+    <div class="bigscreen">
+      Please make your screen small!!😱
+    </div>
   </body>
 </html>
