chats : added a multi-layered photo
2 layered

--- a/index.html
+++ b/index.html
@@ -72,6 +72,34 @@
               </div>
             </div>
           </li>
+
+          <li class="chats__chat friend friend--lg">
+            <div class="friend__column">
+              <div class="wrapper-multi-avatar m-avatar">
+                <img
+                  src="images/avatar3.jpg"
+                  alt=""
+                  class="friend__avatar multi-avatar a1"
+                />
+                <img
+                  src="images/avatar2.jpg"
+                  alt=""
+                  class="friend__avatar multi-avatar a4"
+                />
+              </div>
+              <div class="friend__content">
+                <span class="friend__name">Neo,Apeach</span>
+                <span class="friend__bottom-text">home</span>
+              </div>
+            </div>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span class="chat__timestamp">
+                  Yesterday
+                </span>
+              </div>
+            </div>
+          </li>
         </a>
       </ul>
     </main>
