--- a/chat.html
+++ b/chat.html
@@ -36,7 +36,7 @@
           <h1 class="header__title">Best Friend</h1>
         </div>
         <div class="header__header-column">
-          <a href="find.html">
+          <a href="">
             <span class="header__icon">
               <i class="fas fa-search"></i>
             </span>
@@ -114,7 +114,9 @@
     </div>
 
     <div class="bigscreen">
-      Please make your screen small!!😱
+      <span>
+        Please make your screen small!!😱
+      </span>
     </div>
   </body>
 </html>
