--- a/more.html
+++ b/more.html
@@ -158,7 +158,9 @@
       <img src="images/avatar0.png" />
     </div>
     <div class="bigscreen">
-      Please make your screen small!!😱
+      <span>
+        Please make your screen small!!😱
+      </span>
     </div>
   </body>
 </html>
