--- a/settings.html
+++ b/settings.html
@@ -102,7 +102,9 @@
       </section>
     </main>
     <div class="bigscreen">
-      Please make your screen small!!😱
+      <span>
+        Please make your screen small!!😱
+      </span>
     </div>
   </body>
 </html>
