--- a/find.html
+++ b/find.html
@@ -138,7 +138,9 @@
       <img src="images/avatar0.png" />
     </div>
     <div class="bigscreen">
-      Please make your screen small!!😱
+      <span>
+        Please make your screen small!!😱
+      </span>
     </div>
   </body>
 </html>
