--- a/friends.html
+++ b/friends.html
@@ -66,7 +66,7 @@
         <ul class="friends__list">
           <li class="friends__friend friend">
             <div class="friend__column">
-              <img src="images/avatar.jpg" alt="" class="g-avatar" />
+              <img src="images/avatar2.jpg" alt="" class="g-avatar" />
               <div class="friend__content">
                 <span class="friend__name">Kokoa Friends</span>
               </div>
