--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
               </div>
             </div>
           </li>
+        </a>
 
+        <a href="chat.html">
           <li class="chats__chat friend friend--lg">
             <div class="friend__column">
               <div class="wrapper-multi-avatar m-avatar">
