--- a/find.html
+++ b/find.html
@@ -109,7 +109,7 @@
       <ul class="nav__list">
         <li class="nav__list-item">
           <a href="friends.html" class="nav__list-link">
-            <span class="toptitle">user</span>
+            <span class="toptitle">friends</span>
             <i class="far fa-user"></i>
           </a>
         </li>
