--- a/friends.html
+++ b/friends.html
@@ -103,7 +103,7 @@
       <ul class="nav__list">
         <li class="nav__list-item">
           <a href="friends.html" class="nav__list-link">
-            <span class="toptitle">user</span>
+            <span class="toptitle">friends</span>
             <i class="fas fa-user"></i>
           </a>
         </li>
